--- a/1a-blob2d_initialconditions.ipynb
+++ b/1a-blob2d_initialconditions.ipynb
@@ -280,7 +280,7 @@
     "- We have to reconstruct it if we are to reproduce some input file function.\n",
     "- From Ben:\n",
     ">\"In the input “x” is a radial coordinate between 0 and 1, linear in grid cell number; “y” is a parallel coordinate between 0 and 2pi, linear in grid cell number; “z” is a binormal coordinate between 0 and 2pi, also linear in grid cell number.\n",
-    "The 2pi factors are purely a convention, for historical reasons because BOUT++ was developed for toroidal coordinates in which y and z are angle-like. In hindsight this was probably a mistake, but we’re stuck with it now.\"\n",
+    ">The 2pi factors are purely a convention, for historical reasons because BOUT++ was developed for toroidal coordinates in which y and z are angle-like. In hindsight this was probably a mistake, but we’re stuck with it now.\"\n",
     "\n",
     "##### Note\n",
     "- You only really need to do this kind of stuff if you are trying to reconstruct something in the input file."
@@ -520,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Square the circle: use the function to specify an alternate gaussian, all in SI units\n",
+    "# 3. Finally: use the function to specify an alternate gaussian, all in SI units\n",
     "- To make it abundantly clear how all of this works, let's play with the function and create a different kind of gaussian.\n",
     "- By comparing the function to a regular Gaussian expression, we can see that it also contains parameters for the X and Z position."
    ]
