Add note on diffusion input

--- a/2024-02-01 - Interim results.ipynb
+++ b/2024-02-01 - Interim results.ipynb
@@ -32,6 +32,7 @@
     "- kappa (drive) is 0.2, corresponding to a lambda_n of 6.462e-3\n",
     "- T0 is 40eV\n",
     "- B is 0.5T\n",
+    "- Diffusion is 1e-4 on both the vorticity and density equations\n",
     "\n",
     "Density is varied to achieve different values of alpha, the coupling (damping) parameter. To compare with literature which is mostly for 2D models, you have to multiply the alpha parameter by k**2, where k is the parallel wavenumber which we take as the one corresponding to the largest system wavelength (i.e. k = 2pi/Lpar). In this notebook, this corresponds to \"2dAlpha\". The cases span 2D equivalent alphas of 1e-3, 1e-1 and 1.\n",
     "\n",
