Add info on initial conditions

--- a/2024-02-01 - Interim results.ipynb
+++ b/2024-02-01 - Interim results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,15 @@
     "## Geometry, timestep and and BCs\n",
     "The domain is now 64x64x64. X is the radial, Y the parallel and Z the binormal direction. The cell widths are 2.585e-4, 1.562e-1 and 2.585e-4 metres in the X, Y and Z directions respectively. This makes the domain quite narrow in the X and Z (16.3mm) but long in the Y direction (10m including guard cells). In the X direction the walls have a dirichlet(0) boundary condition on both equations, while Y and Z are periodic. The cases were run with a timestep of 1us for 500 timesteps. Note that our CVODE solver uses an adaptive timestepper, so this is just an output timestep and does not correspond to the solver timestep.\n",
     "\n",
+    "## Initial conditions\n",
+    "Density is initialised as uniform and vorticity is initialised according to the mixmode function as per the input file:\n",
+    "```\n",
+    "scale = 0.1  # Fluctuation amplitude\n",
+    "function = mixmode(2*pi*x) * mixmode(z - y)  # Fluctuation function\n",
+    "```\n",
+    "mixmode represents a mixture of Fourier modes, see BOUT++ docs for the expression:\n",
+    "https://bout-dev.readthedocs.io/en/stable/user_docs/variable_init.html#expressions\n",
+    "\n",
     "## Impact of alpha\n",
     "\n",
     " Higher values of alpha are associated with regimes closer to zonal flows while lower values of alpha create regimes that are more turbulent. Across all values of alpha, the 3D version of Hasegawa Wakatani seems to tend to create some sort of a zonal flow structure eventually. This has to do with the extension of the model into the parallel direction allowing the existence of a mode which doesn't get damped (still trying to understand this better). The end effect is that it behaves closer to a modified than classical HW system. A modified HW system is where the zonal component is explicitly left undamped.\n",
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
