Update for final report

--- a/2024-01-31b - animationtools.ipynb
+++ b/2024-01-31b - animationtools.ipynb
@@ -32,45 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Looking for squash file\n",
-      "- Squash file found. squash date 02/01/2024, 13:12:55, dmp file date 02/01/2024, 12:58:32\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mikek\\OneDrive\\Project\\python-packages\\xBOUT\\xbout\\geometries.py:226: UserWarning: Size of toroidal domain as calculated from nz*dz (<xarray.DataArray 'dz' ()>\n",
-      "dask.array<sub, shape=(), dtype=float64, chunksize=(), chunktype=numpy.ndarray>\n",
-      "Attributes:\n",
-      "    cell_location:  CELL_CENTRE\n",
-      "    direction_y:    Standard\n",
-      "    direction_z:    Average\n",
-      "    source:         Coordinates\n",
-      "    bout_type:      Field2D\n",
-      "    metadata:       {'BOUT_VERSION': 5.01, 'MXG': 2, 'MXSUB': 16, 'MYG': 2, '...\n",
-      "    options:        #\\n# Hasegawa-Wakatani test case\\n#\\n\\ntimestep = 1 * 1e-...\n",
-      "    geometry:        is not the same as 2pi*(ZMAX - ZMIN) (6.283185307179586): using value from dz\n",
-      "  warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Domain extents:\n",
-      "X: 0.0 - 16.3 mm\n",
-      "Y: 78.1 - 9921.9 mm\n",
-      "Z: 0.0 - 16.3 mm\n",
-      "\n",
-      "Time simulated: 5.0e-04 s\n",
       "- Looking for squash file\n",
       "- Squash file found. squash date 02/01/2024, 12:55:22, dmp file date 01/31/2024, 18:13:50\n"
      ]
@@ -98,15 +66,47 @@
      "output_type": "stream",
      "text": [
       "Domain extents:\n",
-      "X: 0.0 - 16.3 mm\n",
+      "X: 0.0 - 81.4 mm\n",
       "Y: 78.1 - 9921.9 mm\n",
       "Z: 0.0 - 16.3 mm\n",
       "\n",
       "Time simulated: 5.0e-04 s\n",
       "- Looking for squash file\n",
-      "- Squash file found. squash date 02/01/2024, 12:56:47, dmp file date 01/31/2024, 18:17:38\n",
+      "- Squash file found. squash date 02/01/2024, 12:56:47, dmp file date 01/31/2024, 18:17:38\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mikek\\OneDrive\\Project\\python-packages\\xBOUT\\xbout\\geometries.py:226: UserWarning: Size of toroidal domain as calculated from nz*dz (<xarray.DataArray 'dz' ()>\n",
+      "dask.array<sub, shape=(), dtype=float64, chunksize=(), chunktype=numpy.ndarray>\n",
+      "Attributes:\n",
+      "    cell_location:  CELL_CENTRE\n",
+      "    direction_y:    Standard\n",
+      "    direction_z:    Average\n",
+      "    source:         Coordinates\n",
+      "    bout_type:      Field2D\n",
+      "    metadata:       {'BOUT_VERSION': 5.01, 'MXG': 2, 'MXSUB': 16, 'MYG': 2, '...\n",
+      "    options:        #\\n# Hasegawa-Wakatani test case\\n#\\n\\ntimestep = 1 * 1e-...\n",
+      "    geometry:        is not the same as 2pi*(ZMAX - ZMIN) (6.283185307179586): using value from dz\n",
+      "  warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Domain extents:\n",
-      "X: 0.0 - 16.3 mm\n",
+      "X: 0.0 - 81.4 mm\n",
+      "Y: 78.1 - 9921.9 mm\n",
+      "Z: 0.0 - 16.3 mm\n",
+      "\n",
+      "Time simulated: 5.0e-04 s\n",
+      "- Looking for squash file\n",
+      "- Squash file found. squash date 02/13/2024, 13:52:37, dmp file date 02/13/2024, 11:20:46\n",
+      "Domain extents:\n",
+      "X: 0.0 - 81.4 mm\n",
       "Y: 78.1 - 9921.9 mm\n",
       "Z: 0.0 - 16.3 mm\n",
       "\n",
@@ -134,9 +134,9 @@
    ],
    "source": [
     "toload = [\n",
-    "    dict(name = \"2dAlpha_1e-3\", path = r\"D:\\hwcases\\hwC-2b_a2d1e-3_k0.2_L10\", T0 = 40, n0 = 1.965e+21, lambda_n = 0.006462),\n",
     "    dict(name = \"2dAlpha_1e-1\", path = r\"D:\\hwcases\\hwC-2a_a2d1e-1_k0.2_L10\", T0 = 40, n0 = 1.59e+19, lambda_n = 0.006462),\n",
-    "    dict(name = \"2dAlpha_1e+0\", path = r\"D:\\hwcases\\hwC-2c_a2d1e0_k0.2_L10\", T0 = 40, n0 = 1.45e+18, lambda_n = 0.006462)\n",
+    "    dict(name = \"2dAlpha_1e+0\", path = r\"D:\\hwcases\\hwC-2c_a2d1e0_k0.2_L10\", T0 = 40, n0 = 1.45e+18, lambda_n = 0.006462),\n",
+    "    dict(name = \"2dAlpha_1e+1\", path = r\"D:\\hwcases\\hwC-2e_a2d1e1_k0.2_L10\", T0 = 40, n0 = 1.235e+16, lambda_n = 0.006462)\n",
     "]\n",
     "\n",
     "cases = {}\n",
@@ -178,25 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n"
+      "n data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "phi data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "vort data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "n data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "phi data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "vort data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "n data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "phi data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n",
+      "vort data passed has 3 dimensions - will use animatplot.blocks.Pcolormesh()\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<animatplot.animation.Animation at 0x2c697a095a0>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -205,20 +203,21 @@
     "# plot_ds = cases['a0.001_k0.2']\n",
     "# plot_ds = cases['1a_a2d_1e-2_k0.2_l_0.1654']\n",
     "# ds = cases['2dAlpha_1e-3'].ds\n",
-    "ds = cases['2dAlpha_1e-1'].ds\n",
-    "# ds = cases['2dAlpha_1e+0'].ds\n",
     "\n",
-    "m = ds.metadata\n",
-    "fig, ax = plt.subplots()\n",
-    "range = 6e19\n",
+    "for i, case in enumerate(cases):\n",
+    "    ds = cases[case].ds\n",
     "\n",
+    "    m = ds.metadata\n",
+    "    \n",
+    "    for var in [\"n\", \"phi\", \"vort\"]:\n",
     "\n",
-    "data = ds.isel(y=32)[\"n\"]\n",
-    "vmin = data.values.min()\n",
-    "vmax = data.values.max()\n",
-    "data.bout.animate2D(fps = 15, cmap = \"Spectral_r\", ax = ax, vmin = vmin , vmax = vmax, x = \"x\", y = \"z\",\n",
-    "                                    save_as=r\"C:\\Users\\mikek\\OneDrive\\Project\\NEPTUNE\\neptune-docs\\2dAlpha_1e-1_n_xz.gif\"\n",
-    "                                    )"
+    "        fig, ax = plt.subplots()\n",
+    "        data = ds.isel(y=32)[var]\n",
+    "        vmin = data.values.min()\n",
+    "        vmax = data.values.max()\n",
+    "        data.bout.animate2D(fps = 15, cmap = \"Spectral_r\", ax = ax, vmin = vmin , vmax = vmax, x = \"x\", y = \"z\",\n",
+    "                                            save_as=rf\"C:\\Users\\mikek\\OneDrive\\Project\\NEPTUNE\\neptune-docs\\Case {i+1} {var}.gif\"\n",
+    "                                            )"
    ]
   },
   {
